@@ -1,3 +1,9 @@
+2009-06-09  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs:
+	  Newlines are technically valid in attribute values. Only
+	  emit a warning, not an error.
+
 2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs: Improve
